// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ShippingOptions stories snapshot > CompletedState story renders and matches snapshot 1`] = `
<div>
  <div
    class="bg-card text-card-foreground flex flex-col rounded-xl border py-6 shadow-sm relative gap-4"
    data-slot="card"
    data-testid="sf-toggle-card-shipping-options"
  >
    <div
      class="@container/card-header grid auto-rows-min gap-2 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 grid-rows-1 items-center"
      data-slot="card-header"
    >
      <div
        class="leading-none font-semibold"
        data-slot="card-title"
        tabindex="0"
      >
        <span
          class="text-lg font-semibold text-foreground"
        >
          Shipping Options
        </span>
      </div>
      <div
        class="col-start-2 row-start-1 justify-self-end row-span-1 self-center"
        data-slot="card-action"
      >
        <button
          aria-label="Edit"
          class="inline-flex items-center justify-center whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive text-primary underline-offset-4 hover:underline h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 cursor-pointer font-bold"
          data-size="sm"
          data-slot="button"
          data-variant="link"
        >
          Edit
        </button>
      </div>
    </div>
    <div
      class="px-6"
      data-slot="card-content"
      data-testid="sf-toggle-card-shipping-options-content"
    >
      <div
        class="space-y-2"
      >
        <p
          class="leading-7 [&:not(:first-child)]:mt-6 text-left text-muted-foreground"
        >
          Enter your shipping address to view available shipping methods.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`ShippingOptions stories snapshot > Default story renders and matches snapshot 1`] = `
<div>
  <div
    class="bg-card text-card-foreground flex flex-col rounded-xl border py-6 shadow-sm relative gap-4"
    data-slot="card"
    data-testid="sf-toggle-card-shipping-options"
  >
    <div
      class="@container/card-header grid auto-rows-min gap-2 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 grid-rows-1 items-center"
      data-slot="card-header"
    >
      <div
        class="leading-none font-semibold"
        data-slot="card-title"
        tabindex="0"
      >
        <span
          class="text-lg font-semibold text-foreground"
        >
          Shipping Options
        </span>
      </div>
      <div
        class="col-start-2 row-start-1 justify-self-end row-span-1 self-center"
        data-slot="card-action"
      />
    </div>
    <div
      class="px-6"
      data-slot="card-content"
      data-testid="sf-toggle-card-shipping-options-content"
    >
      <form
        class="space-y-6"
        method="post"
      >
        <div
          class="space-y-4"
        >
          <label
            class="text-sm font-medium text-foreground"
          >
            Shipping Options
          </label>
          <div
            class="flex items-center justify-center p-8 border-2 border-dashed border-muted rounded-lg"
          >
            <div
              class="text-center space-y-2"
            >
              <p
                class="leading-7 [&:not(:first-child)]:mt-6 text-left text-muted-foreground"
              >
                No shipping methods available
              </p>
              <p
                class="text-sm font-medium leading-none text-left text-muted-foreground"
              >
                Make sure your shipping address is complete and try again.
              </p>
            </div>
          </div>
        </div>
        <div
          class="flex justify-end"
        >
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-10 rounded-md px-6 has-[>svg]:px-4 min-w-48"
            data-size="lg"
            data-slot="button"
            data-variant="default"
            disabled=""
            type="submit"
          >
            No shipping methods available
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`ShippingOptions stories snapshot > DesktopView story renders and matches snapshot 1`] = `
<div
  class="bg-card text-card-foreground flex flex-col rounded-xl border py-6 shadow-sm relative gap-4"
  data-slot="card"
  data-testid="sf-toggle-card-shipping-options"
>
  <div
    class="@container/card-header grid auto-rows-min gap-2 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 grid-rows-1 items-center"
    data-slot="card-header"
  >
    <div
      class="leading-none font-semibold"
      data-slot="card-title"
      tabindex="0"
    >
      <span
        class="text-lg font-semibold text-foreground"
      >
        Shipping Options
      </span>
    </div>
    <div
      class="col-start-2 row-start-1 justify-self-end row-span-1 self-center"
      data-slot="card-action"
    >
      <button
        aria-label="Edit"
        class="inline-flex items-center justify-center whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive text-primary underline-offset-4 hover:underline h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 cursor-pointer font-bold"
        data-size="sm"
        data-slot="button"
        data-variant="link"
      >
        Edit
      </button>
    </div>
  </div>
  <div
    class="px-6"
    data-slot="card-content"
    data-testid="sf-toggle-card-shipping-options-content"
  >
    <div
      class="space-y-2"
    >
      <p
        class="leading-7 [&:not(:first-child)]:mt-6 text-left text-muted-foreground"
      >
        Enter your shipping address to view available shipping methods.
      </p>
    </div>
  </div>
</div>
`;

exports[`ShippingOptions stories snapshot > DisabledState story renders and matches snapshot 1`] = `
<div>
  <div
    class="bg-card text-card-foreground flex flex-col rounded-xl border py-6 shadow-sm relative gap-4"
    data-slot="card"
    data-testid="sf-toggle-card-shipping-options"
  >
    <div
      class="@container/card-header grid auto-rows-min gap-2 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 grid-rows-1 items-center"
      data-slot="card-header"
    >
      <div
        class="leading-none font-semibold"
        data-slot="card-title"
        tabindex="0"
      >
        <span
          class="text-lg font-semibold text-foreground"
        >
          Shipping Options
        </span>
      </div>
      <div
        class="col-start-2 row-start-1 justify-self-end row-span-1 self-center"
        data-slot="card-action"
      >
        <button
          aria-label="Edit"
          class="inline-flex items-center justify-center whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive text-primary underline-offset-4 hover:underline h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 cursor-pointer font-bold"
          data-size="sm"
          data-slot="button"
          data-variant="link"
        >
          Edit
        </button>
      </div>
    </div>
    <div
      class="px-6"
      data-slot="card-content"
      data-testid="sf-toggle-card-shipping-options-content"
    >
      <div
        class="space-y-2"
      >
        <p
          class="leading-7 [&:not(:first-child)]:mt-6 text-left text-muted-foreground"
        >
          Enter your shipping address to view available shipping methods.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`ShippingOptions stories snapshot > LoadingState story renders and matches snapshot 1`] = `
<div>
  <div
    class="bg-card text-card-foreground flex flex-col rounded-xl border py-6 shadow-sm relative gap-4"
    data-slot="card"
    data-testid="sf-toggle-card-shipping-options"
  >
    <div
      class="@container/card-header grid auto-rows-min gap-2 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 grid-rows-1 items-center"
      data-slot="card-header"
    >
      <div
        class="leading-none font-semibold"
        data-slot="card-title"
        tabindex="0"
      >
        <span
          class="text-lg font-semibold text-foreground"
        >
          Shipping Options
        </span>
      </div>
      <div
        class="col-start-2 row-start-1 justify-self-end row-span-1 self-center"
        data-slot="card-action"
      />
    </div>
    <div
      class="px-6"
      data-slot="card-content"
      data-testid="sf-toggle-card-shipping-options-content"
    >
      <form
        class="space-y-6"
        method="post"
      >
        <div
          class="space-y-4"
        >
          <label
            class="text-sm font-medium text-foreground"
          >
            Shipping Options
          </label>
          <div
            class="flex items-center justify-center p-8 border-2 border-dashed border-muted rounded-lg"
          >
            <div
              class="text-center space-y-2"
            >
              <p
                class="leading-7 [&:not(:first-child)]:mt-6 text-left text-muted-foreground"
              >
                No shipping methods available
              </p>
              <p
                class="text-sm font-medium leading-none text-left text-muted-foreground"
              >
                Make sure your shipping address is complete and try again.
              </p>
            </div>
          </div>
        </div>
        <div
          class="flex justify-end"
        >
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-10 rounded-md px-6 has-[>svg]:px-4 min-w-48"
            data-size="lg"
            data-slot="button"
            data-variant="default"
            disabled=""
            type="submit"
          >
            Saving...
          </button>
        </div>
      </form>
    </div>
    <div
      class="absolute inset-0 z-10 rounded-xl bg-background/60"
    >
      <div
        class="flex h-full w-full items-center justify-center"
      >
        <div
          class="animate-spin rounded-full border-2 border-border border-t-primary size-6"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`ShippingOptions stories snapshot > MobileView story renders and matches snapshot 1`] = `
<div>
  <div
    class="bg-card text-card-foreground flex flex-col rounded-xl border py-6 shadow-sm relative gap-4"
    data-slot="card"
    data-testid="sf-toggle-card-shipping-options"
  >
    <div
      class="@container/card-header grid auto-rows-min gap-2 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 grid-rows-1 items-center"
      data-slot="card-header"
    >
      <div
        class="leading-none font-semibold"
        data-slot="card-title"
        tabindex="0"
      >
        <span
          class="text-lg font-semibold text-foreground"
        >
          Shipping Options
        </span>
      </div>
      <div
        class="col-start-2 row-start-1 justify-self-end row-span-1 self-center"
        data-slot="card-action"
      />
    </div>
    <div
      class="px-6"
      data-slot="card-content"
      data-testid="sf-toggle-card-shipping-options-content"
    >
      <form
        class="space-y-6"
        method="post"
      >
        <div
          class="space-y-4"
        >
          <label
            class="text-sm font-medium text-foreground"
          >
            Shipping Options
          </label>
          <div
            aria-label="Shipping Options"
            aria-required="true"
            class="grid gap-3"
            data-slot="radio-group"
            dir="ltr"
            role="radiogroup"
            style="outline: none;"
            tabindex="0"
          >
            <div
              class="group flex items-center space-x-4 p-4 border-2 rounded-lg transition-all duration-200 hover:border-primary/50 hover:bg-accent/30 has-[:checked]:border-primary has-[:checked]:bg-accent has-[:checked]:shadow-md"
            >
              <button
                aria-checked="true"
                class="border-input text-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 aspect-square size-4 shrink-0 rounded-full border shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 w-5 h-5"
                data-radix-collection-item=""
                data-slot="radio-group-item"
                data-state="checked"
                id="standard"
                role="radio"
                tabindex="0"
                type="button"
                value="standard"
              >
                <span
                  class="relative flex items-center justify-center"
                  data-slot="radio-group-indicator"
                  data-state="checked"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-circle fill-primary absolute top-1/2 left-1/2 size-2 -translate-x-1/2 -translate-y-1/2"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                    />
                  </svg>
                </span>
              </button>
              <input
                aria-hidden="true"
                checked=""
                name="shippingMethodId"
                required=""
                style="transform: translateX(-100%); position: absolute; pointer-events: none; opacity: 0; margin: 0px; width: 0px; height: 0px;"
                tabindex="-1"
                type="radio"
                value="standard"
              />
              <label
                class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 flex-1 cursor-pointer group-has-[:checked]:text-foreground"
                data-slot="label"
                for="standard"
              >
                <div
                  class="space-y-1"
                >
                  <p
                    class="text-left text-muted-foreground group-has-[:checked]:text-foreground font-bold text-base"
                  >
                    $9.99 | Standard Shipping
                  </p>
                  <p
                    class="text-left text-muted-foreground group-has-[:checked]:text-foreground font-bold text-base"
                  >
                    5-7 business days
                  </p>
                </div>
              </label>
            </div>
            <div
              class="group flex items-center space-x-4 p-4 border-2 rounded-lg transition-all duration-200 hover:border-primary/50 hover:bg-accent/30 has-[:checked]:border-primary has-[:checked]:bg-accent has-[:checked]:shadow-md"
            >
              <button
                aria-checked="false"
                class="border-input text-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 aspect-square size-4 shrink-0 rounded-full border shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 w-5 h-5"
                data-radix-collection-item=""
                data-slot="radio-group-item"
                data-state="unchecked"
                id="express"
                role="radio"
                tabindex="-1"
                type="button"
                value="express"
              />
              <input
                aria-hidden="true"
                name="shippingMethodId"
                required=""
                style="transform: translateX(-100%); position: absolute; pointer-events: none; opacity: 0; margin: 0px; width: 0px; height: 0px;"
                tabindex="-1"
                type="radio"
                value="express"
              />
              <label
                class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 flex-1 cursor-pointer group-has-[:checked]:text-foreground"
                data-slot="label"
                for="express"
              >
                <div
                  class="space-y-1"
                >
                  <p
                    class="text-left text-muted-foreground group-has-[:checked]:text-foreground font-bold text-base"
                  >
                    $19.99 | Express Shipping
                  </p>
                  <p
                    class="text-left text-muted-foreground group-has-[:checked]:text-foreground font-bold text-base"
                  >
                    2-3 business days
                  </p>
                </div>
              </label>
            </div>
          </div>
        </div>
        <div
          class="flex justify-end"
        >
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-10 rounded-md px-6 has-[>svg]:px-4 min-w-48"
            data-size="lg"
            data-slot="button"
            data-variant="default"
            type="submit"
          >
            Continue to Payment
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`ShippingOptions stories snapshot > NoShippingMethods story renders and matches snapshot 1`] = `
<div>
  <div
    class="bg-card text-card-foreground flex flex-col rounded-xl border py-6 shadow-sm relative gap-4"
    data-slot="card"
    data-testid="sf-toggle-card-shipping-options"
  >
    <div
      class="@container/card-header grid auto-rows-min gap-2 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 grid-rows-1 items-center"
      data-slot="card-header"
    >
      <div
        class="leading-none font-semibold"
        data-slot="card-title"
        tabindex="0"
      >
        <span
          class="text-lg font-semibold text-foreground"
        >
          Shipping Options
        </span>
      </div>
      <div
        class="col-start-2 row-start-1 justify-self-end row-span-1 self-center"
        data-slot="card-action"
      />
    </div>
    <div
      class="px-6"
      data-slot="card-content"
      data-testid="sf-toggle-card-shipping-options-content"
    >
      <form
        class="space-y-6"
        method="post"
      >
        <div
          class="space-y-4"
        >
          <label
            class="text-sm font-medium text-foreground"
          >
            Shipping Options
          </label>
          <div
            class="flex items-center justify-center p-8 border-2 border-dashed border-muted rounded-lg"
          >
            <div
              class="text-center space-y-2"
            >
              <p
                class="leading-7 [&:not(:first-child)]:mt-6 text-left text-muted-foreground"
              >
                No shipping methods available
              </p>
              <p
                class="text-sm font-medium leading-none text-left text-muted-foreground"
              >
                Make sure your shipping address is complete and try again.
              </p>
            </div>
          </div>
        </div>
        <div
          class="flex justify-end"
        >
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-10 rounded-md px-6 has-[>svg]:px-4 min-w-48"
            data-size="lg"
            data-slot="button"
            data-variant="default"
            disabled=""
            type="submit"
          >
            No shipping methods available
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`ShippingOptions stories snapshot > TabletView story renders and matches snapshot 1`] = `
<div>
  <div
    class="bg-card text-card-foreground flex flex-col rounded-xl border py-6 shadow-sm relative gap-4"
    data-slot="card"
    data-testid="sf-toggle-card-shipping-options"
  >
    <div
      class="@container/card-header grid auto-rows-min gap-2 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 grid-rows-1 items-center"
      data-slot="card-header"
    >
      <div
        class="leading-none font-semibold"
        data-slot="card-title"
        tabindex="0"
      >
        <span
          class="text-lg font-semibold text-foreground"
        >
          Shipping Options
        </span>
      </div>
      <div
        class="col-start-2 row-start-1 justify-self-end row-span-1 self-center"
        data-slot="card-action"
      />
    </div>
    <div
      class="px-6"
      data-slot="card-content"
      data-testid="sf-toggle-card-shipping-options-content"
    >
      <form
        class="space-y-6"
        method="post"
      >
        <div
          class="space-y-4"
        >
          <label
            class="text-sm font-medium text-foreground"
          >
            Shipping Options
          </label>
          <div
            aria-label="Shipping Options"
            aria-required="true"
            class="grid gap-3"
            data-slot="radio-group"
            dir="ltr"
            role="radiogroup"
            style="outline: none;"
            tabindex="0"
          >
            <div
              class="group flex items-center space-x-4 p-4 border-2 rounded-lg transition-all duration-200 hover:border-primary/50 hover:bg-accent/30 has-[:checked]:border-primary has-[:checked]:bg-accent has-[:checked]:shadow-md"
            >
              <button
                aria-checked="true"
                class="border-input text-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 aspect-square size-4 shrink-0 rounded-full border shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 w-5 h-5"
                data-radix-collection-item=""
                data-slot="radio-group-item"
                data-state="checked"
                id="standard"
                role="radio"
                tabindex="0"
                type="button"
                value="standard"
              >
                <span
                  class="relative flex items-center justify-center"
                  data-slot="radio-group-indicator"
                  data-state="checked"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-circle fill-primary absolute top-1/2 left-1/2 size-2 -translate-x-1/2 -translate-y-1/2"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                    />
                  </svg>
                </span>
              </button>
              <input
                aria-hidden="true"
                checked=""
                name="shippingMethodId"
                required=""
                style="transform: translateX(-100%); position: absolute; pointer-events: none; opacity: 0; margin: 0px; width: 0px; height: 0px;"
                tabindex="-1"
                type="radio"
                value="standard"
              />
              <label
                class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 flex-1 cursor-pointer group-has-[:checked]:text-foreground"
                data-slot="label"
                for="standard"
              >
                <div
                  class="space-y-1"
                >
                  <p
                    class="text-left text-muted-foreground group-has-[:checked]:text-foreground font-bold text-base"
                  >
                    $9.99 | Standard Shipping
                  </p>
                  <p
                    class="text-left text-muted-foreground group-has-[:checked]:text-foreground font-bold text-base"
                  >
                    5-7 business days
                  </p>
                </div>
              </label>
            </div>
            <div
              class="group flex items-center space-x-4 p-4 border-2 rounded-lg transition-all duration-200 hover:border-primary/50 hover:bg-accent/30 has-[:checked]:border-primary has-[:checked]:bg-accent has-[:checked]:shadow-md"
            >
              <button
                aria-checked="false"
                class="border-input text-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 aspect-square size-4 shrink-0 rounded-full border shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 w-5 h-5"
                data-radix-collection-item=""
                data-slot="radio-group-item"
                data-state="unchecked"
                id="express"
                role="radio"
                tabindex="-1"
                type="button"
                value="express"
              />
              <input
                aria-hidden="true"
                name="shippingMethodId"
                required=""
                style="transform: translateX(-100%); position: absolute; pointer-events: none; opacity: 0; margin: 0px; width: 0px; height: 0px;"
                tabindex="-1"
                type="radio"
                value="express"
              />
              <label
                class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 flex-1 cursor-pointer group-has-[:checked]:text-foreground"
                data-slot="label"
                for="express"
              >
                <div
                  class="space-y-1"
                >
                  <p
                    class="text-left text-muted-foreground group-has-[:checked]:text-foreground font-bold text-base"
                  >
                    $19.99 | Express Shipping
                  </p>
                  <p
                    class="text-left text-muted-foreground group-has-[:checked]:text-foreground font-bold text-base"
                  >
                    2-3 business days
                  </p>
                </div>
              </label>
            </div>
          </div>
        </div>
        <div
          class="flex justify-end"
        >
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-10 rounded-md px-6 has-[>svg]:px-4 min-w-48"
            data-size="lg"
            data-slot="button"
            data-variant="default"
            type="submit"
          >
            Continue to Payment
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`ShippingOptions stories snapshot > WithFormError story renders and matches snapshot 1`] = `
<div>
  <div
    class="bg-card text-card-foreground flex flex-col rounded-xl border py-6 shadow-sm relative gap-4"
    data-slot="card"
    data-testid="sf-toggle-card-shipping-options"
  >
    <div
      class="@container/card-header grid auto-rows-min gap-2 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 grid-rows-1 items-center"
      data-slot="card-header"
    >
      <div
        class="leading-none font-semibold"
        data-slot="card-title"
        tabindex="0"
      >
        <span
          class="text-lg font-semibold text-foreground"
        >
          Shipping Options
        </span>
      </div>
      <div
        class="col-start-2 row-start-1 justify-self-end row-span-1 self-center"
        data-slot="card-action"
      />
    </div>
    <div
      class="px-6"
      data-slot="card-content"
      data-testid="sf-toggle-card-shipping-options-content"
    >
      <form
        class="space-y-6"
        method="post"
      >
        <div
          aria-live="polite"
          class="bg-destructive/10 border border-destructive/20 text-destructive px-4 py-3 rounded text-xl font-bold"
          role="alert"
        >
          Failed to save shipping method. Please try again.
        </div>
        <div
          class="space-y-4"
        >
          <label
            class="text-sm font-medium text-foreground"
          >
            Shipping Options
          </label>
          <div
            aria-label="Shipping Options"
            aria-required="true"
            class="grid gap-3"
            data-slot="radio-group"
            dir="ltr"
            role="radiogroup"
            style="outline: none;"
            tabindex="0"
          >
            <div
              class="group flex items-center space-x-4 p-4 border-2 rounded-lg transition-all duration-200 hover:border-primary/50 hover:bg-accent/30 has-[:checked]:border-primary has-[:checked]:bg-accent has-[:checked]:shadow-md"
            >
              <button
                aria-checked="true"
                class="border-input text-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 aspect-square size-4 shrink-0 rounded-full border shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 w-5 h-5"
                data-radix-collection-item=""
                data-slot="radio-group-item"
                data-state="checked"
                id="standard"
                role="radio"
                tabindex="0"
                type="button"
                value="standard"
              >
                <span
                  class="relative flex items-center justify-center"
                  data-slot="radio-group-indicator"
                  data-state="checked"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-circle fill-primary absolute top-1/2 left-1/2 size-2 -translate-x-1/2 -translate-y-1/2"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                    />
                  </svg>
                </span>
              </button>
              <input
                aria-hidden="true"
                checked=""
                name="shippingMethodId"
                required=""
                style="transform: translateX(-100%); position: absolute; pointer-events: none; opacity: 0; margin: 0px; width: 0px; height: 0px;"
                tabindex="-1"
                type="radio"
                value="standard"
              />
              <label
                class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 flex-1 cursor-pointer group-has-[:checked]:text-foreground"
                data-slot="label"
                for="standard"
              >
                <div
                  class="space-y-1"
                >
                  <p
                    class="text-left text-muted-foreground group-has-[:checked]:text-foreground font-bold text-base"
                  >
                    $9.99 | Standard Shipping
                  </p>
                  <p
                    class="text-left text-muted-foreground group-has-[:checked]:text-foreground font-bold text-base"
                  >
                    5-7 business days
                  </p>
                </div>
              </label>
            </div>
          </div>
        </div>
        <div
          class="flex justify-end"
        >
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-10 rounded-md px-6 has-[>svg]:px-4 min-w-48"
            data-size="lg"
            data-slot="button"
            data-variant="default"
            type="submit"
          >
            Continue to Payment
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`ShippingOptions stories snapshot > WithFreeShipping story renders and matches snapshot 1`] = `
<div>
  <div
    class="bg-card text-card-foreground flex flex-col rounded-xl border py-6 shadow-sm relative gap-4"
    data-slot="card"
    data-testid="sf-toggle-card-shipping-options"
  >
    <div
      class="@container/card-header grid auto-rows-min gap-2 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 grid-rows-1 items-center"
      data-slot="card-header"
    >
      <div
        class="leading-none font-semibold"
        data-slot="card-title"
        tabindex="0"
      >
        <span
          class="text-lg font-semibold text-foreground"
        >
          Shipping Options
        </span>
      </div>
      <div
        class="col-start-2 row-start-1 justify-self-end row-span-1 self-center"
        data-slot="card-action"
      />
    </div>
    <div
      class="px-6"
      data-slot="card-content"
      data-testid="sf-toggle-card-shipping-options-content"
    >
      <form
        class="space-y-6"
        method="post"
      >
        <div
          class="space-y-4"
        >
          <label
            class="text-sm font-medium text-foreground"
          >
            Shipping Options
          </label>
          <div
            aria-label="Shipping Options"
            aria-required="true"
            class="grid gap-3"
            data-slot="radio-group"
            dir="ltr"
            role="radiogroup"
            style="outline: none;"
            tabindex="0"
          >
            <div
              class="group flex items-center space-x-4 p-4 border-2 rounded-lg transition-all duration-200 hover:border-primary/50 hover:bg-accent/30 has-[:checked]:border-primary has-[:checked]:bg-accent has-[:checked]:shadow-md"
            >
              <button
                aria-checked="true"
                class="border-input text-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 aspect-square size-4 shrink-0 rounded-full border shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 w-5 h-5"
                data-radix-collection-item=""
                data-slot="radio-group-item"
                data-state="checked"
                id="free"
                role="radio"
                tabindex="0"
                type="button"
                value="free"
              >
                <span
                  class="relative flex items-center justify-center"
                  data-slot="radio-group-indicator"
                  data-state="checked"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-circle fill-primary absolute top-1/2 left-1/2 size-2 -translate-x-1/2 -translate-y-1/2"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                    />
                  </svg>
                </span>
              </button>
              <input
                aria-hidden="true"
                checked=""
                name="shippingMethodId"
                required=""
                style="transform: translateX(-100%); position: absolute; pointer-events: none; opacity: 0; margin: 0px; width: 0px; height: 0px;"
                tabindex="-1"
                type="radio"
                value="free"
              />
              <label
                class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 flex-1 cursor-pointer group-has-[:checked]:text-foreground"
                data-slot="label"
                for="free"
              >
                <div
                  class="space-y-1"
                >
                  <p
                    class="text-left text-muted-foreground group-has-[:checked]:text-foreground font-bold text-base"
                  >
                    Free | Free Standard Shipping
                  </p>
                  <p
                    class="text-left text-muted-foreground group-has-[:checked]:text-foreground font-bold text-base"
                  >
                    5-7 business days
                  </p>
                </div>
              </label>
            </div>
            <div
              class="group flex items-center space-x-4 p-4 border-2 rounded-lg transition-all duration-200 hover:border-primary/50 hover:bg-accent/30 has-[:checked]:border-primary has-[:checked]:bg-accent has-[:checked]:shadow-md"
            >
              <button
                aria-checked="false"
                class="border-input text-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 aspect-square size-4 shrink-0 rounded-full border shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 w-5 h-5"
                data-radix-collection-item=""
                data-slot="radio-group-item"
                data-state="unchecked"
                id="express"
                role="radio"
                tabindex="-1"
                type="button"
                value="express"
              />
              <input
                aria-hidden="true"
                name="shippingMethodId"
                required=""
                style="transform: translateX(-100%); position: absolute; pointer-events: none; opacity: 0; margin: 0px; width: 0px; height: 0px;"
                tabindex="-1"
                type="radio"
                value="express"
              />
              <label
                class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 flex-1 cursor-pointer group-has-[:checked]:text-foreground"
                data-slot="label"
                for="express"
              >
                <div
                  class="space-y-1"
                >
                  <p
                    class="text-left text-muted-foreground group-has-[:checked]:text-foreground font-bold text-base"
                  >
                    $19.99 | Express Shipping
                  </p>
                  <p
                    class="text-left text-muted-foreground group-has-[:checked]:text-foreground font-bold text-base"
                  >
                    2-3 business days
                  </p>
                </div>
              </label>
            </div>
          </div>
        </div>
        <div
          class="flex justify-end"
        >
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-10 rounded-md px-6 has-[>svg]:px-4 min-w-48"
            data-size="lg"
            data-slot="button"
            data-variant="default"
            type="submit"
          >
            Continue to Payment
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`ShippingOptions stories snapshot > WithMultipleOptions story renders and matches snapshot 1`] = `
<div>
  <div
    class="bg-card text-card-foreground flex flex-col rounded-xl border py-6 shadow-sm relative gap-4"
    data-slot="card"
    data-testid="sf-toggle-card-shipping-options"
  >
    <div
      class="@container/card-header grid auto-rows-min gap-2 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 grid-rows-1 items-center"
      data-slot="card-header"
    >
      <div
        class="leading-none font-semibold"
        data-slot="card-title"
        tabindex="0"
      >
        <span
          class="text-lg font-semibold text-foreground"
        >
          Shipping Options
        </span>
      </div>
      <div
        class="col-start-2 row-start-1 justify-self-end row-span-1 self-center"
        data-slot="card-action"
      />
    </div>
    <div
      class="px-6"
      data-slot="card-content"
      data-testid="sf-toggle-card-shipping-options-content"
    >
      <form
        class="space-y-6"
        method="post"
      >
        <div
          class="space-y-4"
        >
          <label
            class="text-sm font-medium text-foreground"
          >
            Shipping Options
          </label>
          <div
            aria-label="Shipping Options"
            aria-required="true"
            class="grid gap-3"
            data-slot="radio-group"
            dir="ltr"
            role="radiogroup"
            style="outline: none;"
            tabindex="0"
          >
            <div
              class="group flex items-center space-x-4 p-4 border-2 rounded-lg transition-all duration-200 hover:border-primary/50 hover:bg-accent/30 has-[:checked]:border-primary has-[:checked]:bg-accent has-[:checked]:shadow-md"
            >
              <button
                aria-checked="true"
                class="border-input text-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 aspect-square size-4 shrink-0 rounded-full border shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 w-5 h-5"
                data-radix-collection-item=""
                data-slot="radio-group-item"
                data-state="checked"
                id="standard"
                role="radio"
                tabindex="0"
                type="button"
                value="standard"
              >
                <span
                  class="relative flex items-center justify-center"
                  data-slot="radio-group-indicator"
                  data-state="checked"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-circle fill-primary absolute top-1/2 left-1/2 size-2 -translate-x-1/2 -translate-y-1/2"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                    />
                  </svg>
                </span>
              </button>
              <input
                aria-hidden="true"
                checked=""
                name="shippingMethodId"
                required=""
                style="transform: translateX(-100%); position: absolute; pointer-events: none; opacity: 0; margin: 0px; width: 0px; height: 0px;"
                tabindex="-1"
                type="radio"
                value="standard"
              />
              <label
                class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 flex-1 cursor-pointer group-has-[:checked]:text-foreground"
                data-slot="label"
                for="standard"
              >
                <div
                  class="space-y-1"
                >
                  <p
                    class="text-left text-muted-foreground group-has-[:checked]:text-foreground font-bold text-base"
                  >
                    $9.99 | Standard Shipping
                  </p>
                  <p
                    class="text-left text-muted-foreground group-has-[:checked]:text-foreground font-bold text-base"
                  >
                    5-7 business days
                  </p>
                </div>
              </label>
            </div>
            <div
              class="group flex items-center space-x-4 p-4 border-2 rounded-lg transition-all duration-200 hover:border-primary/50 hover:bg-accent/30 has-[:checked]:border-primary has-[:checked]:bg-accent has-[:checked]:shadow-md"
            >
              <button
                aria-checked="false"
                class="border-input text-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 aspect-square size-4 shrink-0 rounded-full border shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 w-5 h-5"
                data-radix-collection-item=""
                data-slot="radio-group-item"
                data-state="unchecked"
                id="express"
                role="radio"
                tabindex="-1"
                type="button"
                value="express"
              />
              <input
                aria-hidden="true"
                name="shippingMethodId"
                required=""
                style="transform: translateX(-100%); position: absolute; pointer-events: none; opacity: 0; margin: 0px; width: 0px; height: 0px;"
                tabindex="-1"
                type="radio"
                value="express"
              />
              <label
                class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 flex-1 cursor-pointer group-has-[:checked]:text-foreground"
                data-slot="label"
                for="express"
              >
                <div
                  class="space-y-1"
                >
                  <p
                    class="text-left text-muted-foreground group-has-[:checked]:text-foreground font-bold text-base"
                  >
                    $19.99 | Express Shipping
                  </p>
                  <p
                    class="text-left text-muted-foreground group-has-[:checked]:text-foreground font-bold text-base"
                  >
                    2-3 business days
                  </p>
                </div>
              </label>
            </div>
            <div
              class="group flex items-center space-x-4 p-4 border-2 rounded-lg transition-all duration-200 hover:border-primary/50 hover:bg-accent/30 has-[:checked]:border-primary has-[:checked]:bg-accent has-[:checked]:shadow-md"
            >
              <button
                aria-checked="false"
                class="border-input text-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 aspect-square size-4 shrink-0 rounded-full border shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 w-5 h-5"
                data-radix-collection-item=""
                data-slot="radio-group-item"
                data-state="unchecked"
                id="overnight"
                role="radio"
                tabindex="-1"
                type="button"
                value="overnight"
              />
              <input
                aria-hidden="true"
                name="shippingMethodId"
                required=""
                style="transform: translateX(-100%); position: absolute; pointer-events: none; opacity: 0; margin: 0px; width: 0px; height: 0px;"
                tabindex="-1"
                type="radio"
                value="overnight"
              />
              <label
                class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 flex-1 cursor-pointer group-has-[:checked]:text-foreground"
                data-slot="label"
                for="overnight"
              >
                <div
                  class="space-y-1"
                >
                  <p
                    class="text-left text-muted-foreground group-has-[:checked]:text-foreground font-bold text-base"
                  >
                    $29.99 | Overnight Shipping
                  </p>
                  <p
                    class="text-left text-muted-foreground group-has-[:checked]:text-foreground font-bold text-base"
                  >
                    Next business day
                  </p>
                </div>
              </label>
            </div>
          </div>
        </div>
        <div
          class="flex justify-end"
        >
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-10 rounded-md px-6 has-[>svg]:px-4 min-w-48"
            data-size="lg"
            data-slot="button"
            data-variant="default"
            type="submit"
          >
            Continue to Payment
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;
